--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,14 +14,14 @@
 	</welcome-file-list>
 
 
-	<!-- <servlet>
+	<servlet>
 		<servlet-name>index_servlet</servlet-name>
 		<servlet-class>sys.paymentbilling.servlet.IndexServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>index_servlet</servlet-name>
 		<url-pattern>/</url-pattern>
-	</servlet-mapping> -->
+	</servlet-mapping>
 
 
 	<servlet>
@@ -30,7 +30,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>login_servlet</servlet-name>
-		<url-pattern>/login</url-pattern>
+		<url-pattern>/login/*</url-pattern>
 	</servlet-mapping>
 
 
@@ -59,6 +59,11 @@
 	<servlet-mapping>
 		<servlet-name>accountant_student_servlet</servlet-name>
 		<url-pattern>/accountant/student/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>/assets/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
